--- a/scss/master.scss
+++ b/scss/master.scss
@@ -6,7 +6,7 @@
 @import "illustrations";
 @import "swish";
 @import "milya";
-
+@import "info";
 html{
   background-color: $background-grey;
   margin: 0;
