adds swish browser section

--- a/scss/_colours.scss
+++ b/scss/_colours.scss
@@ -2,7 +2,7 @@
 //---Portfolio Colours---//
 
 $background-grey:#F7F7F7;
-$default-text:#3E3535;
+$default-text:#232431;
 $link-active:#0011FF;
 $link-hover:#FF3769;
 $white:#FFFFFF;
