--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -45,7 +45,7 @@ nav{
     height: 55%;
     transition-duration: 0.2s;
     }
-    
+
     a{
       margin: 0 0 0 0;
       padding: 0 0 0 0;
@@ -118,4 +118,11 @@ article.footer{
   z-index: 1;
   width: 23px;
   height: 92px;
+@include for-phone-only{
+  display: none;
+}
+@include for-tablet-portait-up{
+  display: none;
+}
+
 }
